--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "the backend of the coinly project",
   "main": "index.js",
   "scripts": {
-    "test": "npm index.js",
-    "start": "nodemon index.js"
+    "test": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "Reutki Marcu",
   "license": "ISC",
