--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Reutki Marcu",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
     "newsapi": "^2.4.1",
     "nodemon": "^2.0.22"
   }
